# Kursovaya_DRF

./: .env.sample  Dockerfile  README.md  cov_report.txt  pyproject.toml  requirements.txt
config/: settings.py  urls.py
habits/: admin.py  models.py  paginations.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py  0002_alter_habit_user.py
users/: models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_user_tg_chat_id.py
